[gd_scene load_steps=7 format=2]

[ext_resource path="res://square.png" type="Texture" id=1]
[ext_resource path="res://player.gd" type="Script" id=2]
[ext_resource path="res://player_shoot.wav" type="AudioStream" id=3]
[ext_resource path="res://item_ended.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=2]
resource_name = "take_damage"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.266667, 0.443137, 0.717647, 1 ), Color( 0.266667, 0.443137, 0.717647, 0.392157 ), Color( 0.266667, 0.443137, 0.717647, 1 ), Color( 0.266667, 0.443137, 0.717647, 0.392157 ), Color( 0.266667, 0.443137, 0.717647, 1 ) ]
}

[node name="player" type="KinematicBody2D"]
modulate = Color( 0.266667, 0.443137, 0.717647, 1 )
collision_mask = 8
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="can_shoot_timer" type="Timer" parent="."]
wait_time = 0.8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/take_damage = SubResource( 2 )

[node name="sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -25.0

[node name="item_done" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -20.0
[connection signal="timeout" from="can_shoot_timer" to="." method="_on_can_shoot_timer_timeout"]
